--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,12 @@ skip_missing_interpreters = True
 basepython = python3.7
 deps =
      -r{toxinidir}/test-requirements.txt
-commands=pylint denonTray
+commands=pylint denontray
 
 [testenv:lint]
 basepython = python3.7
 deps =
      -r{toxinidir}/test-requirements.txt
 commands =
-         flake8 denonTray
-         pydocstyle denonTray
+         flake8 denontray
+         pydocstyle denontray
